[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'neupan'
version = "1.1"
requires-python = ">= 3.10"
authors = [{name = "Han Ruihua", email = "hanrh@connect.hku.hk"}]
description = "NeuPAN"
readme = "README.md"
dependencies = [
    "colorama>=0.4.6",
    "cvxpylayers>=0.1.9",
    "dill>=0.4.0",
    "ecos>=2.0.14",
    "gctl>=1.2",
    "ir-sim>=2.6.0",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "scikit-learn>=1.7.1",
    "scipy<=1.10",
    "torch>=2.7.1",
]

[project.optional-dependencies]
irsim = ['ir-sim>=2.4.0']
all = ['ir-sim>=2.4.0']

[tool.setuptools]
py-modules = ['neupan']



